css fix for error message gap + clsx for class selection

--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -34,6 +34,7 @@
   font-size: 16px;
   line-height: 1.5;
   color: var(--color-font-main);
+  margin-top: 8px;
 }
 
 .signInFormInputError {
@@ -93,9 +94,8 @@
 
 @media screen and (min-width: 768px) {
   .signInForm {
-    margin: 0 auto;
     max-width: 436px;
-    margin-bottom: 16px;
+    margin: 0 auto 16px;
   }
   .signInFormTitle {
     font-size: 36px;
